improved version, works on safari+mobile

--- a/sgdjs/index.html
+++ b/sgdjs/index.html
@@ -22,91 +22,6 @@
     <div id="done">
     </div>
 
-    <script type="text/javascript">
-        var x, y;
-
-        var num_workers;
-        var timer;
-        
-        workerDone = function(e) {
-
-            var theta = $M(JSON.parse(e.data.d));
-            var msg = "<p>Worker " + e.data.id + ":<br />";
-            msg += theta.inspect();
-            msg += "</p>";
-
-            $('#done').append(msg);
-
-            if(e.data.id == (num_workers - 1)) {
-                $('#working').hide();
-                $('#time').html(window.performance.now() - timer);
-                $('#timer').show();
-            }
-        }
-
-        end = function(x,y) {
-
-            var a  = $('#a').val();
-            var iters = $('#iters').val();
-            num_workers = $('#workers').val();
-
-            var size = x.elements.length;
-
-            var worker;
-
-            timer = window.performance.now();
-
-            for (i = 0; i < num_workers; i++) {
-                worker = new Worker('sgd.js');
-
-                var fro = (size/num_workers * i);
-                var to = (size/num_workers * (i + 1));
-
-                var job = {
-                    'x': x.elements.slice(fro, to),
-                    'y': y.elements.slice(fro, to),
-                    'a': a,
-                    'iter': iters
-                }
-
-                var JSONjob = JSON.stringify(job);
-
-                worker.onmessage = workerDone;
-                worker.postMessage({id: i, d: JSONjob});
-            }
-
-        }
-
-        step = function(x) {
-
-            $.getJSON('y.json',function(data){
-                y = $M(data);
-                end(x,y);
-            }).error(function(){
-                console.log('error');
-            });
-
-        }
-
-        start = function() {
-
-            $('#working').show();
-            $('#timer').hide();
-            $('#done').html('');
-
-            $.getJSON('x.json',function(data){
-                x = $M(data);
-                step(x);
-            }).error(function(){
-                console.log('error');
-            });
-
-        }
-
-        $('#working').hide();
-        $('#timer').hide();
-
-    </script>
-
+    <script src="client.js"></script>
 </body>
 </html>
