--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,6 +5,7 @@
     <title>MLitB</title>
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
+    <script src="filesaver.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.19/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.19/angular-route.min.js"></script>
