public client demo

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -11,6 +11,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.19/angular-route.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="ng-sortable.js"></script>
+    <script src="megapix.js"></script>
+    <script src="binaryajax.js"></script>
+    <script src="exif.js"></script>
+    <script src="readJpeg.js"></script>
     <script src="client.js"></script>
     <script src="ng.js"></script>
     
