--- a/app/static/index.html
+++ b/app/static/index.html
@@ -15,6 +15,7 @@
     <script src="binaryajax.js"></script>
     <script src="exif.js"></script>
     <script src="readJpeg.js"></script>
+    <script src="lastmlitb.js"></script>
     <script src="client.js"></script>
     <script src="ng.js"></script>
     
