download params+config, add nn from file

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -14,7 +14,6 @@
     <script src="megapix.js"></script>
     <script src="binaryajax.js"></script>
     <script src="exif.js"></script>
-    <script src="readJpeg.js"></script>
     <script src="lastmlitb.js"></script>
     <script src="client.js"></script>
     <script src="ng.js"></script>
@@ -46,6 +45,9 @@
                     </li>
                     <li>
                         <a href="#/new">New</a>
+                    </li>
+                    <li>
+                        <a href="#/new-file">New from file</a>
                     </li>
                 </ul>
             </div>
