--- a/index.html
+++ b/index.html
@@ -1,43 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>MLitB by software-engineering-amsterdam</title>
+    <meta name="description" content="MLitB : Machine Learning in the Browser">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>MLitB</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>MLitB</h1>
-        <p>Machine Learning in the Browser</p>
-        <p class="view"><a href="https://github.com/software-engineering-amsterdam/MLitB">View the Project on GitHub <small>software-engineering-amsterdam/MLitB</small></a></p>
-        <ul>
-          <li><a href="https://github.com/software-engineering-amsterdam/MLitB/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/software-engineering-amsterdam/MLitB/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/software-engineering-amsterdam/MLitB">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/software-engineering-amsterdam/MLitB">View on GitHub</a>
+
+          <h1 id="project_title">MLitB</h1>
+          <h2 id="project_tagline">Machine Learning in the Browser</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/software-engineering-amsterdam/MLitB/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/software-engineering-amsterdam/MLitB/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a id="what-is-mlitb" class="anchor" href="#what-is-mlitb" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MLitB?</h3>
 
-<h2>
-<a id="why-machine-learning-in-the-browser" class="anchor" href="#why-machine-learning-in-the-browser" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why Machine Learning in the Browser?</h2>
+<h4>
+<a id="why-machine-learning-in-the-browser" class="anchor" href="#why-machine-learning-in-the-browser" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why Machine Learning in the Browser?</h4>
 
-<h2>
-<a id="sharing-collaborating" class="anchor" href="#sharing-collaborating" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sharing, collaborating</h2>
+<h4>
+<a id="sharing-collaborating" class="anchor" href="#sharing-collaborating" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sharing, collaborating</h4>
 
-<h2>
-<a id="massively-distributed-computing" class="anchor" href="#massively-distributed-computing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Massively distributed computing</h2>
+<h4>
+<a id="massively-distributed-computing" class="anchor" href="#massively-distributed-computing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Massively distributed computing</h4>
 
 <h3>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h3>
@@ -57,11 +61,16 @@ $ git checkout gh-pages
 <p>MLitB is a collaborative effort between researchers at the University of Amsterdam with support from Amsterdam Data Science.</p>
       </section>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/software-engineering-amsterdam">software-engineering-amsterdam</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">MLitB maintained by <a href="https://github.com/software-engineering-amsterdam">software-engineering-amsterdam</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
