Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,56 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="MLitB : Machine Learning in the Browser">
+    <title>MLitB by software-engineering-amsterdam</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>MLitB</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>MLitB</h1>
+        <p>Machine Learning in the Browser</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/software-engineering-amsterdam/MLitB">View on GitHub</a>
+        <p class="view"><a href="https://github.com/software-engineering-amsterdam/MLitB">View the Project on GitHub <small>software-engineering-amsterdam/MLitB</small></a></p>
 
-          <h1 id="project_title">MLitB</h1>
-          <h2 id="project_tagline">Machine Learning in the Browser</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/software-engineering-amsterdam/MLitB/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/software-engineering-amsterdam/MLitB/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/software-engineering-amsterdam/MLitB/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/software-engineering-amsterdam/MLitB/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/software-engineering-amsterdam/MLitB">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h3>
 <a id="what-is-mlitb" class="anchor" href="#what-is-mlitb" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MLitB?</h3>
 
-<p>Machine Learning in the Browser (MLitB) is an ambitious software development project whose aim is to bring ML, in all its facets, to an audience that includes both the general public and the research community.  </p>
+<p>Machine Learning in the Browser (MLitB) is an ambitious software development project whose aim is to bring ML, in all its facets, to an audience that includes both the general public and the research community.  MLitB is not just a software library, but is a philosophical approach to achieving our goals of bringing powerful machine learning models to a global audience.</p>
 
 <h4>
 <a id="why-machine-learning-in-the-browser" class="anchor" href="#why-machine-learning-in-the-browser" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why Machine Learning in the Browser?</h4>
 
 <p>The ubiquity of the browser as a computational engine makes it an ideal platform for the development of massively distributed and collaborative machine learning.  </p>
 
-<p>To accomplish this, we have written a lightweight software library that runs in native browsers, which is capable of performing massively distributed machine learning on heterogeneous devices (desktops, laptops, smart phones and tablets), embedding ML models into the devices for both prediction and collaborative learning initiatives,  be shared as an encapsulated object (a {\em research closure}) containing configurations, code, and parameters.</p>
+<p>To accomplish this, we have written a lightweight software library that runs in native browsers, which is capable of performing massively distributed machine learning on heterogeneous devices (desktops, laptops, smart phones and tablets), embedding ML models into the devices for both prediction and collaborative learning initiatives,  be shared as an encapsulated object containing configurations, code, and parameters.</p>
 
 <p>Implications of this software paradigm include truly collaborative machine learning, open to the public, real privacy preserving computation, field experiments, green computing, and more.</p>
 
 <h3>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-<p>Requirements: <code>node.js</code>, <code>redis-server</code>.</p>
+<p>Requirements: <code>node.js</code>, <code>redis-server</code>, <code>npm</code>, and npm modeules <code>express</code>, <code>commander</code>.</p>
 
-<p>To install, clone the repository.  </p>
+<p>After installing the above requirements, clone the MLitB repository.  </p>
 
 <p>In a terminal, start redis</p>
 
@@ -74,17 +71,12 @@
 
 <p>MLitB is a collaborative effort between researchers at the University of Amsterdam with support from Amsterdam Data Science.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">MLitB maintained by <a href="https://github.com/software-engineering-amsterdam">software-engineering-amsterdam</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/software-engineering-amsterdam">software-engineering-amsterdam</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
