--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="MLitB : Machine Learning in the Browser">
+    <title>MLitB by software-engineering-amsterdam</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>MLitB</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>MLitB</h1>
+        <p>Machine Learning in the Browser</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/software-engineering-amsterdam/MLitB">View on GitHub</a>
+        <p class="view"><a href="https://github.com/software-engineering-amsterdam/MLitB">View the Project on GitHub <small>software-engineering-amsterdam/MLitB</small></a></p>
 
-          <h1 id="project_title">MLitB</h1>
-          <h2 id="project_tagline">Machine Learning in the Browser</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/software-engineering-amsterdam/MLitB/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/software-engineering-amsterdam/MLitB/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/software-engineering-amsterdam/MLitB/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/software-engineering-amsterdam/MLitB/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/software-engineering-amsterdam/MLitB">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h3>
 <a id="what-is-mlitb" class="anchor" href="#what-is-mlitb" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MLitB?</h3>
 
@@ -66,11 +63,11 @@ $ npm i
 
 <p>Clients do not require any software installation beyond a browser.  </p>
 
-<h4>
-<a id="running-mlitb" class="anchor" href="#running-mlitb" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running MLitB</h4>
+<h3>
+<a id="running-mlitb" class="anchor" href="#running-mlitb" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running MLitB</h3>
 
-<h5>
-<a id="start-the-servers" class="anchor" href="#start-the-servers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Start the servers</h5>
+<h4>
+<a id="start-the-servers" class="anchor" href="#start-the-servers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Start the servers</h4>
 
 <p>In a terminal, start redis</p>
 
@@ -131,17 +128,12 @@ $ npm i
 
 <p>arXiv bibtex</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">MLitB maintained by <a href="https://github.com/software-engineering-amsterdam">software-engineering-amsterdam</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/software-engineering-amsterdam">software-engineering-amsterdam</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
