Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h3>
 <a id="what-is-mlitb" class="anchor" href="#what-is-mlitb" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is MLitB?</h3>
 
-<p>Machine Learning in the Browser (MLitB) is an ambitious software development project whose aim is to bring ML, in all its facets, to an audience that includes both the general public and the research community.  MLitB is not just a software library, but is a philosophical approach to achieving our goals of bringing powerful machine learning models to a global audience.</p>
+<p>Machine Learning in the Browser (MLitB, <a href="http://software-engineering-amsterdam.github.io/MLitB/">http://software-engineering-amsterdam.github.io/MLitB/</a>) is an ambitious software development project whose aim is to bring ML, in all its facets, to an audience that includes both the general public and the research community.  MLitB is not just a software library, but is a philosophical approach to achieving our goals of bringing powerful machine learning models to a global audience.</p>
 
 <h4>
 <a id="why-machine-learning-in-the-browser" class="anchor" href="#why-machine-learning-in-the-browser" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why Machine Learning in the Browser?</h4>
