Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@ $ npm i
 <h3>
 <a id="mlitb-reference" class="anchor" href="#mlitb-reference" aria-hidden="true"><span class="octicon octicon-link"></span></a>MLitB Reference</h3>
 
-<p>Please cite MLitB whenever possible:</p>
-
-<p>arXiv bibtex</p>
+<p>Please cite MLitB whenever possible <a href="http://arxiv.org/abs/1412.2432v1">http://arxiv.org/abs/1412.2432v1</a>.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/software-engineering-amsterdam">software-engineering-amsterdam</a></p>
